--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -30,5 +30,5 @@ jobs:
         # You need to create a PYPI_API_TOKEN secret in your GitHub repository settings
         # with a PyPI API token (starts with pypi-).
         # See: https://pypi.org/help/#apitoken
-        UV_PUBLISH_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        UV_PUBLISH_TOKEN: ${{ secrets.PYPI_API_TOKEN_WIDE }}
       run: uv publish
