feat: Enhance 'find' command for company selection
Improve the 'cocli find' command to provide a more intuitive user experience when searching for companies.

- Collect all strong fuzzy matches (score >= 70) for a given query.
- If exactly one strong match is found, display its details directly.
- If multiple strong matches are found, present a single, numbered list of these matches (including their fuzzy scores) and prompt the user to select one.
- If no strong matches are found, fall back to listing all available companies for selection.

Address previous issues:
- Initialize 'list_already_printed' variable at the beginning of the 'find' function to resolve 'NameError'.
- Correct 'pyproject.toml' structure by moving '[tool.uv]' to the end of the file to resolve TOML parsing errors and recursive 'uv run' invocations.
- Add 'requires-python' to 'pyproject.toml' to silence 'uv' warnings.
- Ensure 'uv' correctly installs entry points by setting 'tool.uv.package = true' in 'pyproject.toml'.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "cocli"
 version = "0.2.0"
 description = "A CLI for managing a plain-text CRM."
 authors = [{ name = "Your Name", email = "you@example.com" }]
+requires-python = ">=3.8"
 dependencies = [
     "typer",
     "pyyaml",
@@ -16,3 +17,6 @@ cocli = "cocli.main:app"
 
 [tool.setuptools.packages]
 find = { include = ["cocli*"] }
+
+[tool.uv]
+package = true
