feat: Implement automated testing and Git integration
Introduce a comprehensive automated testing system using pytest, pytest-bdd, and pytest-mock.
Orchestrate tests and development tasks via a Makefile.
Add new CLI commands: `data-path`, `git-sync`, and `git-commit` for enhanced user interaction with data.
Refactor core data directory handling for improved testability and flexibility.
Update README.md and docs/TEST_PLAN.md to reflect new features and testing procedures.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "cocli"
 version = "0.2.0"
 description = "A CLI for managing a plain-text CRM."
-authors = [{ name = "Your Name", email = "you@example.com" }]
+authors = [{ name = "Mark Stouffer", email = "mark@getbizkite.com" }]
 requires-python = ">=3.8"
 dependencies = [
     "typer",
@@ -15,8 +15,17 @@ dependencies = [
 [project.scripts]
 cocli = "cocli.main:app"
 
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "pytest-bdd",
+    "pytest-mock",
+]
+
 [tool.setuptools.packages]
 find = { include = ["cocli*"] }
 
 [tool.uv]
 package = true
+
+
