--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic",
     "fuzzywuzzy",
     "python-Levenshtein",
+    "rich",
 ]
 
 [project.scripts]
@@ -27,5 +28,3 @@ find = { include = ["cocli*"] }
 
 [tool.uv]
 package = true
-
-
