--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,10 +4,12 @@
         {
             "name": "Python: cocli (with arguments)",
             "type": "debugpy",
+
             "request": "launch",
-            "program": "${workspaceFolder}/cocli/main.py",
+            "python": "${workspaceFolder}/.venv/bin/python",
+            "module": "cocli.main",
             "console": "integratedTerminal",
-            "args": [],
+            "args": ["fz"],
             "justMyCode": true
         },
         {
