feat: Implement Google Maps scraper
This commit introduces a new `scrape` command to the CLI, allowing users to scrape business information from Google Maps.

Key features include:
- Scraping based on zip code or city/state and a search query.
- Geocoding functionality to convert locations into coordinates using the Nominatim API.
- Outputting scraped data to a CSV file in the "Lead Sniper" format.
- Integration with `playwright` for web scraping and `beautifulsoup4` for HTML parsing.
- Configuration options for scraper settings, such as delay and max pages.

The necessary dependencies (`requests`, `playwright`, `beautifulsoup4`, `dateparser`) have been added to `pyproject.toml` and `uv.lock`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ dependencies = [
     "fuzzywuzzy",
     "python-Levenshtein",
     "rich",
+    "requests",
+    "dateparser",
+    "playwright",
+    "beautifulsoup4",
 ]
 
 [project.scripts]
