--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "dateparser",
     "playwright",
     "beautifulsoup4",
+    "tomli", # For parsing TOML files
+    "tomli_w", # For writing TOML files
 ]
 
 [project.scripts]
