feat(scraper): Add Shopify scraper for myip.ms
This commit introduces a new scraper to gather Shopify store information from myip.ms.

The new functionality includes:\n- A `scrape-shopify-myip` command to initiate the scraping process.\n- A scraper that uses playwright to browse myip.ms and extract store data.\n- A parser to process the scraped HTML and extract relevant information.\n- An Excel to CSV converter utility to handle downloaded reports from myip.ms.\n- Filtering for US and Canadian companies.\n\nThis will enable the enrichment of the company database with high-quality data from Shopify stores.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,6 +38,20 @@
             ],
             "console": "integratedTerminal",
             "justMyCode": true
+        },
+        {
+            "name": "Python: cocli scrape-shopify-myip Debug",
+            "type": "debugpy",
+            "request": "launch",
+            "python": "${workspaceFolder}/.venv/bin/python",
+            "module": "cocli.main",
+            "args": [
+                "scrape-shopify-myip",
+                "23.227.38.32",
+                "--debug"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": false
         }
     ]
 }
