feat(enrichment): Add Shopify data enrichment workflow
This commit introduces a complete workflow for processing and enriching Shopify store data scraped from myip.ms.

New commands have been added to support this:
- `process-shopify-scrapes`: Compiles and deduplicates raw CSV scrapes into a clean `index.csv`.
- `enrich-shopify-data`: Reads the compiled list, creates company records, and scrapes each website for detailed information like contact info and social media links.

Key changes include:
- A new `Website` Pydantic model for structured website data.
- An enhanced `WebsiteScraper` to handle "About Us" pages, extract more data points, and integrate with Playwright for debugging.
- Updated documentation to reflect the new architecture.
- A new VSCode launch configuration for debugging the enrichment process.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -52,6 +52,21 @@
             ],
             "console": "integratedTerminal",
             "justMyCode": false
+        },
+        {
+            "name": "Python: cocli enrich-shopify-data Debug",
+            "type": "debugpy",
+            "request": "launch",
+            "python": "${workspaceFolder}/.venv/bin/python",
+            "module": "cocli.main",
+            "args": [
+                "enrich-shopify-data",
+                "--debug",
+                "--headed",
+                "--devtools"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": false
         }
     ]
 }
