--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -61,9 +61,9 @@
             "module": "cocli.main",
             "args": [
                 "enrich-shopify-data",
-                "--debug",
-                "--headed",
-                "--devtools"
+                // "--debug",
+                // "--headed",
+                // "--devtools"
             ],
             "console": "integratedTerminal",
             "justMyCode": false
