feat: Create Campaign primitives and workflow to manage marketing campaigns.
- Add simplekml and toml dependencies to project

- Included simplekml version 1.3.6 in dependencies and requires-dist sections.
- Added toml version 0.10.2 to dependencies and requires-dist sections.
- Updated wheels section to include the new packages.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "openpyxl", # Backend for pandas to read XLSX
     "tomli", # For parsing TOML files
     "tomli_w", # For writing TOML files
+    "simplekml",
+    "toml",
 ]
 
 [project.scripts]
