feat: Implement data enrichment and fix install
This commit introduces a new data enrichment framework and fixes a critical installation bug.

Enrichment Framework:
- Adds new commands `enrich-customers` and `enrich-websites` to enrich existing data with information from Google Maps and website scraping.
- Implements a "Source Monitoring" policy for enrichments, storing data from different sources in separate, versioned files within an `enrichments` directory for each entity.
- Introduces new Pydantic models for `GeocodeData`, `ShopifyData`, and `Website` data.
- Adds a `google_maps_finder` to locate businesses on Google Maps.

Bug Fix:
- Corrects the `[tool.setuptools.packages]` configuration in `pyproject.toml` to resolve a process hang during `make install`.

Other Improvements:
- Updates the `import_turboship` command to create Shopify enrichment data.
- Refactors the `deduplicate` command to operate on a single `prospects.csv` file.
- Enhances the KML renderer to use the new geocoding enrichment data for more accurate placemarks.
- Improves person and company data handling to support the new enrichment and symlinking structure.

--- a/campaigns/2025/turboship/config.toml
+++ b/campaigns/2025/turboship/config.toml
@@ -7,5 +7,12 @@ email = "admin@turboheatweldingtools.com"
 one_password_path = "op://TurboHeatWelding/GMail_TurboHeatWeldingTools/password"
 
 [prospecting]
-locations = ["Albuquerque, NM", "Las Vegas, NV", "Reno, NV", "Oxnard, CA", "Bakersfield, CA", "Santa Barbara, CA", "San Luis Obispo, CA", "Santa Cruz, CA"]
+locations = [
+    "Reno, NV",
+    "Oxnard, CA",
+    "Bakersfield, CA",
+    "Santa Barbara, CA",
+    "San Luis Obispo, CA",
+    "Santa Cruz, CA"
+    ]
 queries = ["commercial vinyl flooring contractor", "rubber flooring contractor", "sports flooring contractor"]
