--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "simplekml",
     "toml",
     "httpx",
+    "pydantic-settings", # Added for BaseSettings
 ]
 
 [project.scripts]
