fix: All tests pass: 20

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -93,6 +93,9 @@
                 "--devtools"
             ],
             "console": "integratedTerminal",
+            "env": {
+                "PWDEBUG": "0"
+            },
             "justMyCode": true,
             "python": "${workspaceFolder}/.venv/bin/python"
         }
