Refactor code structure for improved readability and maintainability
- 22 linting errors in 13 files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,12 @@ dev = [
     "behave",
     "build",
     "mypy",
+    "types-toml",
+    "types-PyYAML",
+    "types-requests",
+    "pandas-stubs",
+    "types-dateparser",
+    "types-pytz",
 ]
 
 [tool.setuptools]
