feat(campaigns): Introduce campaign workflow and management
This commit introduces a new campaign management system to streamline the process of prospecting and outreach.

Key changes include:
- **Campaign Workflow:** A state machine ('transitions' library) is used to manage the lifecycle of a campaign, from importing customers to prospecting and outreach.
- **Campaign CLI:** The 'cocli campaign' command is enhanced to set, unset, and show the current campaign context, as well as manage the campaign workflow.
- **Google Maps Processing:** A new 'cocli google-maps process' command is added to orchestrate the scraping, ingesting, and importing of Google Maps data for a specific campaign.
- **Command Refactoring:** Existing commands like 'import-companies' and 'ingest-google-maps-csv' have been refactored to be campaign-aware, inferring context from the currently set campaign.
- **Fuzzy Finder Integration:** The 'fz' command now filters search results based on the active campaign.
- **Makefile Updates:** The 'Makefile' has been updated to reflect the new campaign-centric commands.

This new system provides a more structured and automated way to manage marketing and sales campaigns within 'cocli'.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "toml",
     "httpx",
     "pydantic-settings", # Added for BaseSettings
+    "transitions",
 ]
 
 [project.scripts]
