plan: Plan catalog of indexes and directory of index intermediates.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "httpx",
     "pydantic-settings", # Added for BaseSettings
     "transitions",
+    "geopy",
 ]
 
 [project.scripts]
