feat: Implement query prospects command and enhance company model
- Introduce a new cocli query prospects command to efficiently find prospects
  within a specified radius of a city, with options to filter by email presence.
- Add a model_validator to the Company model to automatically parse city,
  state, and zip code from a full_address if not explicitly provided.
- Refactor Company.from_directory to improve data handling during instantiation.
- Update campaigns/2025/turboship/config.toml with new campaign name and locations.

--- a/campaigns/2025/turboship/config.toml
+++ b/campaigns/2025/turboship/config.toml
@@ -1,5 +1,5 @@
 [campaign]
-name = "Turboship Q3 2025"
+name = "turboship"
 tag = "turboship"
 
 [google_maps]
@@ -8,7 +8,6 @@ one_password_path = "op://TurboHeatWelding/GMail_TurboHeatWeldingTools/password"
 
 [prospecting]
 locations = [
-  "Memphis, Tn",
-  "Jackson, MS"
+  "Albuquerque, NM"
     ]
 queries = ["commercial vinyl flooring contractor", "rubber flooring contractor", "sports flooring contractor"]
