feat: Introduce FastAPI enrichment service and Dockerization
This commit introduces a new FastAPI-based enrichment service, designed to handle website scraping and data enrichment. This service is containerized using Docker, allowing for independent deployment and scaling.

Key changes include:
- Added a Dockerfile to build the enrichment service.
- Updated Makefile with docker-build and docker-run-enrichment commands for easy management of the Docker image and container.
- Refactored cocli/commands/campaign.py to integrate with the new enrichment service, including a health check and asynchronous calls to the service.
- Modified cocli/core/enrichment.py and cocli/scrapers/google_maps.py to support the new service architecture and improve robustness.
- Added cocli/services/enrichment_service/main.py to define the FastAPI application.
- Updated pyproject.toml and uv.lock to include fastapi and uvicorn dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ dependencies = [
     "pydantic-settings", # Added for BaseSettings
     "transitions",
     "geopy",
+    "fastapi",
+    "uvicorn[standard]",
 ]
 
 [project.scripts]
