--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.8"
 dependencies = [
     "typer",
     "pyyaml",
-    "pydantic",
+    "pydantic[email]",
     "fuzzywuzzy",
     "python-Levenshtein",
     "rich",
@@ -37,6 +37,7 @@ dev = [
     "pytest",
     "pytest-bdd",
     "pytest-mock",
+    "pytest-asyncio",
     "behave",
     "build",
     "mypy",
