feat: Implement AWS CDK deployment for scraper and enhance campaign pipeline
This commit introduces several new features and improvements:

- **AWS CDK Scraper Deployment:** Added a new CDK stack ('cdk_scraper_deployment') to deploy the web scraper as a Fargate service, including ECR repository, VPC, ECS cluster, and integration with AWS Secrets Manager for 1Password session tokens.
- **Campaign Pipeline Enhancements:**
    - Refactored the 'campaign pipeline' to support browser width/height configuration.
    - Integrated prospect data CSV writing during scraping.
    - Improved email enrichment flow and saving of enrichment data.
- **New Prospect Management Commands:**
    - Added 'cocli prospects enrich' command for asynchronous enrichment of prospects.
    - Added 'cocli prospects tag-from-csv' for recovery/tagging of companies based on scraped CSV data.
- **Google Maps Scraper Improvements:** Enhanced scrolling logic for more robust scraping and added map scale extraction.
- **General Improvements:**
    - Updated 'import_prospect' to tag companies with the campaign name.
    - Added 'HTTPException' handling in the enrichment service.
    - Configured 'mypy' to exclude CDK deployment files and ignore missing imports for CDK libraries.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,3 +70,10 @@ exclude = [
     "data",
 ]
 follow_imports = "skip"
+
+[[tool.mypy.overrides]]
+module = [
+    "aws_cdk.*",
+    "constructs.*",
+]
+ignore_missing_imports = true
