feat(tui): Improve TUI company and person list views and logging
Refactor TUI company and person list views to enhance selection logic and integrate with the new  model. This includes updating event handling, adding new key bindings, and improving logging for better debugging. Also, added documentation for TUI event logging.

--- a/.mise.toml
+++ b/.mise.toml
@@ -10,6 +10,9 @@ test = { run = "pytest -s tests/", depends = ["install"] }
 lint = { run = "mypy --config-file pyproject.toml .", depends = ["install"] }
 build = { run = "python -m build", depends = ["install"] }
 clean = "rm -rf ./.venv uv.lock"
+mypy-daemon-start = { run = "mypy --daemon run --config-file pyproject.toml", depends = ["install"] }
+mypy-daemon-stop = { run = "mypy --daemon stop" }
+mypy-daemon-status = { run = "mypy --daemon status" }
 import-turboship = { run = "./.venv/bin/cocli import-turboship /home/mstouffer/.local/share/cocli_data/scraped_data/turboship/customers/customers.csv /home/mstouffer/.local/share/cocli_data/scraped_data/turboship/customers/customer_addresses.csv", depends = ["install"] }
 render-kml = { run = "./.venv/bin/cocli render kml", depends = ["install"] }
 scrape-prospects = { run = "./.venv/bin/cocli campaign scrape-prospects", depends = ["install"] }
