--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ package = true
 [tool.mypy]
 strict = true
 ignore_missing_imports = false
+mypy_path = "$MYPY_PATH"
 exclude = [
     ".venv",
     "build",
