feat: Improve TUI navigation and testing
- Update .envrc for mise direnv activation.
- Add VSCode launch config for TUI dev mode.
- Refactor TUI  for better focus handling.
- Remove redundant 'j'/'k' bindings from CompanyDetailScreen.
- Enhance CompanyList selection logic with 'enter' key support.
- Introduce  utility for robust TUI test assertions.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,19 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: Launch TUI Dev Mode",
+            "type": "python",
+            "request": "launch",
+            "module": "cocli.tui.app",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "env": {
+                "TEXTUAL_DEV": "true",
+                "PYTHONPATH": "${workspaceFolder}"
+            },
+            "python": "${workspaceFolder}/.venv/bin/python"
+        },
+        {
             "name": "Python: Launch Current File",
             "type": "python",
             "request": "launch",
