feat: HTTPS Enrichment Service, S3 Canonical Storage, and Config Refactor
Comprehensive update to enabling secure cloud-based enrichment and proper data management.

Key Changes:

- **Infrastructure (HTTPS):**
  - Updated CDK stack to provision ACM Certificate and HTTPS Listener for `enrich.turboheat.net`.
  - Configured Fargate service to redirect HTTP to HTTPS.
  - Explicitly named ECS Cluster `ScraperCluster` and Service `EnrichmentService`.

- **Data Management (S3):**
  - Created `S3CompanyManager` to save canonical `website.md` (YAML) directly to S3 from Fargate.
  - Refactored `S3DomainManager` to rely on Task Role credentials (removed `profile_name` arg).
  - Updated `WebsiteScraper` to use `S3CompanyManager` for persistence.

- **Configuration:**
  - Refactored `Campaign` model and `cocli` logic to support `[aws]` section in `config.toml` (`profile`, `hosted-zone-id`).
  - Updated `get_config_dir` to prioritize `COCLI_DATA_HOME/config` for better portability.

- **Scraper Improvements:**
  - Fixed indentation bug in `scrape_google_maps`.
  - Implemented `max_proximity_miles` logic to bound searches around targets.
  - Added missing imports (`re`, `httpx`, etc.) to `website_scraper.py`.
  - Added rounding to `ScrapeIndex` CSV output.

- **Testing & Scripts:**
  - Fixed `test_enrichment_service.py` and `test_campaign_app.py` to match new config structure.
  - Fixed `export_enriched_emails.py` formatting.
  - Updated `Makefile` test targets.

--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,10 @@
 eval "$(mise direnv activate)"
 
+export COCLI_SQS_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/193481341784/CdkScraperDeploymentStack-EnrichmentQueue4D4E619F-srLGUESiUDYU
+export COCLI_ENRICHMENT_SERVICE_URL=https://enrich.turboheat.net
+
+export AWS_PROFILE=bizkite-support
+
 export MYPY_PATH="$(pwd)/cocli"
 
 on_enter() {
