feat: incrementally align with s3-compatible data structure
This commit incrementally integrates the new S3-aligned data structure into the main branch, addressing regressions and ensuring continued functionality.

Key changes include:
- Refactored config paths: get_campaign_scraped_data_dir and get_scraped_areas_index_dir are now in use.
- Prospects CSV: The main scraping pipeline (achieve-goal) and related commands (import_companies, ingest_google_maps_csv, prospects, query, render_prospects_kml, export_enriched_emails, ingest_legacy_csv) now correctly read from and write to the campaign-specific prospects.csv in the new location (cocli_data/campaigns/<campaign_name>/scraped_data/prospects.csv).
- Scraped Areas Index: The ScrapeIndex class now correctly uses phrase-specific CSVs stored in cocli_data/indexes/scraped_areas/<phrase-slug>.csv.
- Scraper Fixes:
    - Resolved 'IndentationError' in google_maps.py.
    - Enhanced website extraction in google_maps_parsers/extract_website.py to use 'aria-label', improving domain detection from list views.
    - Implemented robust detail scraping in google_maps.py as a fallback when website/address is missing from list view.
    - Optimized scraper deduplication by passing 'known_domains' early, reducing redundant processing.
    - Improved CLI output for skipped items to prevent terminal clutter.
- Migration Scripts: Added and executed utility scripts (merge_prospects.py, move_prospects.py, migrate_scraped_areas.py) to consolidate existing data into the new structure.
- Linting & Mypy: Addressed all ruff and mypy errors, including persistent turboship directory exclusion issues and type annotation requirements.

Verification:
- The full achieve-goal pipeline runs successfully, producing and consuming from the cloud queue.
- Data is correctly saved to and read from the new directory structures.
- All linting and type-checking checks pass.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,7 @@ exclude = [
     "cocli.egg-info",
     "data",
     "cdk_scraper_deployment",
+    "turboship", # Exclude the entire turboship directory
 ]
 follow_imports = "normal"
 
