fix: stabilize hybrid scraping pipeline and config handling
- fix(campaign): correctly queue existing companies for enrichment in achieve-goal pipeline
- fix(scraper): resolve undefined retry_delay variable in google_maps scraper
- fix(config): handle PosixPath serialization and None values in TOML config saving
- fix(types): resolve MyPy type errors in campaign commands
- docs: update plan and task status

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,7 +33,7 @@
             "python": "${workspaceFolder}/.venv/bin/python",
             "args": [
                 "campaign",
-                "ahcieve-goal",
+                "achieve-goal",
                 "turboship",
                 "--emails",
                 "10000",
