fix: Correctly call Playwright install within RPi worker Docker container
Updated run_worker.sh in the Dockerfile to use 'uv run playwright install --with-deps'. This ensures that the Playwright browser binaries are installed within the Python virtual environment managed by uv, resolving the 'Executable doesn't exist' error in the Docker container.

--- a/docker/rpi-worker/Dockerfile
+++ b/docker/rpi-worker/Dockerfile
@@ -64,7 +64,7 @@ RUN echo '#!/bin/bash' > docker/rpi-worker/run_worker.sh && \
     echo 'export COCLI_SCRAPE_TASKS_QUEUE_URL="https://sqs.us-east-1.amazonaws.com/193481341784/CdkScraperDeploymentStack-ScrapeTasksQueue9836DB1F-TfprnaM0R5gs"' >> docker/rpi-worker/run_worker.sh && \
     echo 'export COCLI_ENRICHMENT_QUEUE_URL="https://sqs.us-east-1.amazonaws.com/193481341784/CdkScraperDeploymentStack-EnrichmentQueue4D4E619F-srLGUESiUDYU"' >> docker/rpi-worker/run_worker.sh && \
     echo 'export AWS_PROFILE="turboship-support"' >> docker/rpi-worker/run_worker.sh && \
-    echo 'playwright install --with-deps' >> docker/rpi-worker/run_worker.sh && \
+    echo 'uv run playwright install --with-deps' >> docker/rpi-worker/run_worker.sh && \
     echo 'uv run cocli worker scrape --headed' >> docker/rpi-worker/run_worker.sh && \
     chmod +x docker/rpi-worker/run_worker.sh
 
