--- a/docker/rpi-worker/Dockerfile
+++ b/docker/rpi-worker/Dockerfile
@@ -65,7 +65,7 @@ RUN echo '#!/bin/bash' > docker/rpi-worker/run_worker.sh && \
     echo 'export COCLI_ENRICHMENT_QUEUE_URL="https://sqs.us-east-1.amazonaws.com/193481341784/CdkScraperDeploymentStack-EnrichmentQueue4D4E619F-srLGUESiUDYU"' >> docker/rpi-worker/run_worker.sh && \
     echo 'export AWS_PROFILE="turboship-support"' >> docker/rpi-worker/run_worker.sh && \
     echo 'uv run playwright install --with-deps' >> docker/rpi-worker/run_worker.sh && \
-    echo 'uv run cocli worker scrape --headed' >> docker/rpi-worker/run_worker.sh && \
+    echo 'uv run cocli worker scrape' >> docker/rpi-worker/run_worker.sh && \
     chmod +x docker/rpi-worker/run_worker.sh
 
 # Command to run the cocli worker
