--- a/.envrc
+++ b/.envrc
@@ -2,6 +2,7 @@ eval "$(mise direnv activate)"
 export COCLI_SCRAPE_TASKS_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/193481341784/CdkScraperDeploymentStack-ScrapeTasksQueue9836DB1F-TfprnaM0R5gs
 export COCLI_ENRICHMENT_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/193481341784/CdkScraperDeploymentStack-EnrichmentQueue4D4E619F-srLGUESiUDYU
 export COCLI_ENRICHMENT_SERVICE_URL=https://enrich.turboheat.net
+export COCLI_GM_LIST_ITEM_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/193481341784/CdkScraperDeploymentStack-GmListItemQueue739F25AE-i7DEGJyksoPZ
 
 export AWS_PROFILE=turboship-support
 
